globus-gssapi-gsi (11.25-1+gt6.@distro@) @distro@; urgency=low

  * support loading mutiple extra CA certs

 -- Globus Toolkit <support@globus.org>  Wed, 16 Dec 2015 09:19:30 -0600

globus-gssapi-gsi (11.24-1+gt6.@distro@) @distro@; urgency=low

  * Don't call SSLv3_method unless it is available

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 10:12:26 -0500

globus-gssapi-gsi (11.23-1+gt6.@distro@) @distro@; urgency=low

  * Remove @} without matching @{

 -- Globus Toolkit <support@globus.org>  Wed, 25 Nov 2015 16:15:21 -0500

globus-gssapi-gsi (11.22-1+gt6.@distro@) @distro@; urgency=low

  * GT-627: gss_import_cred crash
  * Improve portability for some tests

 -- Globus Toolkit <support@globus.org>  Tue, 08 Sep 2015 16:47:27 -0400

globus-gssapi-gsi (11.21-1+gt6.@distro@) @distro@; urgency=low

  * Find thread libs for in-tree testing

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jul 2015 22:40:07 -0400

globus-gssapi-gsi (11.20-1+gt6.@distro@) @distro@; urgency=low

  * GT-614: GLOBUS_GSS_C_NT_HOST_IP doesn't allow host-only imports and comparisons

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 15:13:43 -0400

globus-gssapi-gsi (11.19-1+gt6.@distro@) @distro@; urgency=low

  * export config file values into environment if not set already

 -- Globus Toolkit <support@globus.org>  Mon, 08 Jun 2015 19:14:16 -0400

globus-gssapi-gsi (11.18-1+gt6.@distro@) @distro@; urgency=low

  * Revert to HYBRID name mode by default

 -- Globus Toolkit <support@globus.org>  Thu, 04 Jun 2015 11:31:08 -0400

globus-gssapi-gsi (11.17-1+gt6.@distro@) @distro@; urgency=low

  * Threaded test fixes

 -- Globus Toolkit <support@globus.org>  Mon, 01 Jun 2015 17:23:05 -0400

globus-gssapi-gsi (11.16-1+gt6.@distro@) @distro@; urgency=low

  * Update autoconf script

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 10:22:17 -0400

globus-gssapi-gsi (11.15-1+gt6.@distro@) @distro@; urgency=low

  * Add config file for GSI options