@@ -1,6 +1,6 @@
 Name:		globus-gssapi-gsi
 %global _name %(tr - _ <<< %{name})
-Version:	11.25
+Version:	11.26
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - GSSAPI library
@@ -154,6 +154,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Mon Jan 25 2016 Globus Toolkit <support@globus.org> - 11.26-1
+- Fix FORCE_TLS setting to allow TLSv1.1 and TLS1.2, not just TLSv1.0
+
 * Wed Dec 16 2015 Globus Toolkit <support@globus.org> - 11.25-1
 - support loading mutiple extra CA certs
 
